--- a/stimsets.tex
+++ b/stimsets.tex
@@ -2,7 +2,7 @@
   \caption{Common stimulus-sets for facial expression}
   \label{table:stimsets}
   \begin{tabularx}{\textwidth}{lllll}
-    \textbf{Name} & \textbf{$N_{models}$} & \textbf{Expressions} & \textbf{Angles} & \textbf{Ethnicities} \\
+    & \textbf{$N_{models}$} & \textbf{$N_{expressions}$} & \textbf{$N_{angles}$} & \textbf{Ethnicities} \\
     \toprule
     JACFEE  & 8  &  8 & 1 & Japanese \& European \\
     KDEF    & 70 &  8 & 5 & European             \\
