Add simple diagram of modules

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,6 @@
 \usepackage[dvipsnames,svgnames,table]{xcolor}
 \usepackage{comment,multirow,tabulary,booktabs,threeparttable,tabularx,xcolor,lmodern,graphicx,longtable,float,wrapfig,url,underscore}
-\usepackage{parnotes,comment,multirow,amsmath,amssymb,marvosym,wasysym}
+\usepackage{parnotes,comment,multirow,amsmath,amssymb,marvosym,wasysym, tikz}
 \usepackage[T1]{fontenc}
 \usepackage[normalem]{ulem}
 \usepackage[version=3]{mhchem}
