--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,9 @@
 \usepackage[dvipsnames,svgnames,table]{xcolor}
 \usepackage{comment,multirow,tabulary,booktabs,threeparttable,tabularx,xcolor,lmodern,graphicx,longtable,float,wrapfig,url,underscore}
 \usepackage{parnotes,comment,multirow,amsmath,amssymb,marvosym,wasysym, tikz}
+\usetikzlibrary{graphs}
+\usetikzlibrary{graphs.standard}
+\usegdlibrary{trees}
 \usepackage[T1]{fontenc}
 \usepackage[normalem]{ulem}
 \usepackage[version=3]{mhchem}
@@ -15,3 +18,33 @@
 \usepackage{nth}
 \DeclareLanguageMapping{american}{american-apa}
 \addbibresource{refs.bib}
+
+;; Fuck javascript
+\lstdefinelanguage{JavaScript}{
+  keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+  keywordstyle=\color{blue}\bfseries,
+  ndkeywords={class, export, boolean, throw, implements, import, this},
+  ndkeywordstyle=\color{darkgray}\bfseries,
+  identifierstyle=\color{black},
+  sensitive=false,
+  comment=[l]{//},
+  morecomment=[s]{/*}{*/},
+  commentstyle=\color{purple}\ttfamily,
+  stringstyle=\color{red}\ttfamily,
+  morestring=[b]',
+  morestring=[b]"
+}
+\lstset{
+   language=JavaScript,
+   extendedchars=true,
+   basicstyle=\footnotesize\ttfamily,
+   showstringspaces=false,
+   showspaces=false,
+   numbers=left,
+   numberstyle=\footnotesize,
+   numbersep=9pt,
+   tabsize=2,
+   breaklines=true,
+   showtabs=false,
+   captionpos=b
+}
