add listings to toc

--- a/toc.tex
+++ b/toc.tex
@@ -4,6 +4,7 @@
 \tableofcontents
 \listoffigures
 \listoftables
+\listoflistings
 
 \let\stdsection\section
 \renewcommand\section{\newpage\stdsection}
